# QuickTemplate

./: .pre-commit-config.yaml  README.md  categories.txt  config.py  main.py  pyproject.toml
main/: load.py
output/: repeat.csv  transactions.csv
