[tool.poetry]
name = "QuickTemplate"
version = "1.0.0"
description = "Quickly start a new experiment!"
authors = ["Michael Verdegaal"]
readme = "README.md"
packages = [{include = "main"}]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pre-commit = "^3.7.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
transformers = "^4.44.2"
pandas = "^2.2.2"

[tool.black]
line-length = 100
extend-exclude = '/^[^.]+$|\.(?!(py)$)([^.]+$)/'

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
